Fix: overflowing card issue with large numbers of significant digits

--- a/src/pages/Pool/Pool.scss
+++ b/src/pages/Pool/Pool.scss
@@ -190,6 +190,9 @@
   .price-card > .card-row {
     justify-content: space-between;
     gap: margins.$m-4;
+    // allow inputs to wrap around if they have a large number of significant digits
+    // (should only occur in the cases where we have no context of price)
+    flex-flow: wrap;
   }
 
   .tick-price-card {
